--- a/src/pages/local-deployment/query.mdx
+++ b/src/pages/local-deployment/query.mdx
@@ -5,7 +5,7 @@ Ask natural language questions about images and get detailed answers with Moondr
 ## Installation & Model
 
 ```bash filename="terminal"
-pip install moondream==0.0.2
+pip install moondream==0.0.4
 ```
 
 Download the model from our [Model Downloads](/model-downloads) page.
@@ -13,8 +13,8 @@ Download the model from our [Model Downloads](/model-downloads) page.
 ## Basic Usage
 
 ```python filename="example.py"
-from moondream import VL
-model = VL("models/moondream-2b-int8.bin.gz")
+from moondream import vl
+model = vl("models/moondream-2b-int8.bin.gz")
 
 # Ask a simple question
 answer = model.query(image, "What is the main color in this image?")
