--- a/src/pages/cloud/point.mdx
+++ b/src/pages/cloud/point.mdx
@@ -10,6 +10,32 @@ import Head from 'next/head';
 
 Get coordinates for specific objects or regions in images.
 
+## Quick Start
+
+```typescript
+import { vl } from "moondream";
+import fs from "fs";
+
+// Initialize the client
+const model = new vl({
+  apiKey: "your-api-key",
+});
+
+// Read an image file
+const image = fs.readFileSync("image.jpg");
+
+// Get object coordinates
+const points = await model.point(image, "the red car");
+console.log(points);
+// [
+//   {
+//     x: 0.4,  // Normalized coordinates (0-1)
+//     y: 0.6   // (0,0) is top-left, (1,1) is bottom-right
+//   },
+//   ...
+// ]
+```
+
 ## API Specification
 
 ### Request Model
@@ -23,15 +49,15 @@ class PointRequest(BaseModel):
 ### Response Model
 
 ```python
-class PointResponse(BaseModel):
-    result: List[Dict[str, float]]  # List of point coordinates
+class PointOutput(BaseModel):
+    points: List[Point]  # List of point coordinates
 ```
 
 ### Example Response
 
 ```python
 {
-    "result": [
+    "points": [
         {
             "x": 0.4,  # Normalized coordinates (0-1)
             "y": 0.6   # (0,0) is top-left, (1,1) is bottom-right
@@ -46,7 +72,59 @@ class PointResponse(BaseModel):
 
 ## Example Usage
 
-<Tabs items={['cURL', 'Python', 'Node.js', 'Fetch', 'Axios']}>
+<Tabs items={['Node.js Client', 'Python Client', 'cURL', 'Node.js HTTP', 'Fetch', 'Axios']}>
+  <Tabs.Tab>
+```typescript filename="point-client.ts"
+import { vl } from "moondream";
+import fs from "fs";
+
+// Initialize client
+const model = new vl({
+  apiKey: process.env.MOONDREAM_API_KEY
+});
+
+async function main() {
+  // Read image file
+  const image = fs.readFileSync("image.jpg");
+  
+  // Get object coordinates
+  const points = await model.point(image, "the red car");
+  
+  if (!points.length) {
+    console.log("No objects found");
+  } else {
+    points.forEach((point, index) => {
+      console.log(`Object ${index + 1} found at coordinates:`);
+      console.log(`  Position: (${point.x.toFixed(2)}, ${point.y.toFixed(2)})`);
+    });
+  }
+}
+
+main().catch(console.error);
+```
+  </Tabs.Tab>
+  <Tabs.Tab>
+```python filename="point-client.py"
+import moondream as md
+from PIL import Image
+
+# Initialize client
+model = md.vl(api_key="your_api_key_here")
+
+# Load image
+image = Image.open("image.jpg")
+
+# Get object coordinates
+result = model.point(image, "the red car")
+
+if not result["points"]:
+    print("No objects found")
+else:
+    for i, point in enumerate(result["points"], 1):
+        print(f"Object {i} found at coordinates:")
+        print(f"  Position: ({point['x']:.2f}, {point['y']:.2f})")
+```
+  </Tabs.Tab>
   <Tabs.Tab>
 ~~~bash filename="point.sh"
 # Convert image to base64
@@ -60,58 +138,6 @@ curl -X POST https://api.moondream.ai/v1/point \
     \"image_url\": \"data:image/jpeg;base64,$IMAGE_BASE64\",
     \"object\": \"the red car\"
   }"
-~~~
-  </Tabs.Tab>
-  <Tabs.Tab>
-~~~python filename="point.py" {3-4,14,33-34} showLineNumbers
-import os
-from urllib.request import Request, urlopen
-import json
-import base64
-
-# Load image file and convert to base64
-def get_base64_image(image_path):
-    with open(image_path, "rb") as f:
-        return base64.b64encode(f.read()).decode()
-
-# Get API key from environment variable
-api_key = os.getenv("MOONDREAM_API_KEY")
-if not api_key:
-    raise ValueError("Please set MOONDREAM_API_KEY environment variable")
-
-# Prepare request
-image_base64 = get_base64_image("image.jpg")
-data = {
-    "image_url": f"data:image/jpeg;base64,{image_base64}",
-    "object": "the red car"
-}
-
-# Set up request headers
-headers = {
-    "X-Moondream-Auth": api_key,
-    "Content-Type": "application/json"
-}
-
-# Make request using standard library
-req = Request(
-    "https://api.moondream.ai/v1/point",
-    data=json.dumps(data).encode(),
-    headers=headers,
-    method="POST"
-)
-
-# Send request and handle response
-try:
-    with urlopen(req) as response:
-        result = json.loads(response.read())
-        if not result["result"]:
-            print("No objects found")
-        else:
-            for i, point in enumerate(result["result"], 1):
-                print(f"Object {i} found at coordinates:")
-                print(f"  Position: ({point['x']:.2f}, {point['y']:.2f})")
-except Exception as e:
-    print(f"Error making request: {str(e)}")
 ~~~
   </Tabs.Tab>
   <Tabs.Tab>
@@ -283,7 +309,7 @@ pointToObject();
 </Tabs>
 
 <Callout type="info">
-  The examples above demonstrate different ways to interact with the API using popular libraries and tools. Each example includes proper error handling, environment variable usage, and formatted output of the detected object positions. The coordinates are normalized between 0 and 1, where (0,0) is the top-left corner and (1,1) is the bottom-right corner of the image.
+  The examples above demonstrate different ways to interact with the API. The Node.js and Python client libraries provide the simplest integration, while other examples show how to use the REST API directly with popular libraries and tools.
 </Callout>
 
 ---
