--- a/src/pages/cookbook/basic-usage.mdx
+++ b/src/pages/cookbook/basic-usage.mdx
@@ -7,11 +7,11 @@ Here are some common usage patterns for Moondream.
 Get real-time responses by streaming tokens:
 
 ~~~python
-from moondream import VL
+from moondream import vl
 from PIL import Image
 
 # Initialize model
-model = VL()
+model = vl()
 
 # Load image and ask question
 image = Image.open("image.jpg")
@@ -35,7 +35,7 @@ A robust implementation with proper error handling:
 import logging
 from typing import Optional, Dict
 from pathlib import Path
-from moondream import VL
+from moondream import vl
 from PIL import Image
 import torch
 
@@ -43,7 +43,7 @@ class ImageCaptioner:
     def __init__(self, model_path: Optional[str] = None):
         self.logger = logging.getLogger(__name__)
         try:
-            self.model = VL(model_path) if model_path else VL()
+            self.model = vl(model_path) if model_path else vl()
         except Exception as e:
             self.logger.error(f"Failed to initialize model: {str(e)}")
             raise
